calcular balances dejado a medias